--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,35 @@
 * {
     padding: 0;
     margin: 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
+
+html {
+    font-size: 16px;
+    background-color: #636363;
+}
+
+h1 {
+    text-align: center;
+    color: white;
+    font-size: 5em;
+    margin-top: 5%;
+}
+
+.calculator {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.calc-container {
+    background-color: #1d1d1d;
+    width: 600px;
+    height: auto;
+    border-radius: 0 0 30px 30px;
+}
+
