modified css to scss

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,10 +5,11 @@
     scroll-behavior: smooth;
 }
 
-html{
+html {
     font-size: 16px;
     background-color: #636363;
 }
+
 // 
 h1 {
     text-align: center;
@@ -18,7 +19,7 @@ h1 {
 
 }
 
-.calculator{
+.calculator {
     position: absolute;
 
     top: 50%;
@@ -26,120 +27,129 @@ h1 {
 
     transform: translate(-50%, -50%);
 
-    .calc-container{
+    .calc-container {
         background-color: #1d1d1d;
         width: 600px;
         height: auto;
         border-radius: 0 0 30px 30px;
 
-        .output{
-            width: 100%;; 
+        .output {
+            width: 100%;
+            ;
 
-            .operation{
+            .operation {
                 width: 600px;
                 height: 70px;
-            
+
                 color: #878787;
-            
+
                 font-size: 1.9em;
                 font-weight: bold;
-            
+
                 position: relative;
                 overflow: hidden;
-                .value{
+
+                .value {
                     position: absolute;
-                
+
                     bottom: 5px;
-                    right : 10px;
-                    
+                    right: 10px;
+
                     white-space: nowrap;
                     overflow: hidden;
                 }
             }
-            .result{
+
+            .result {
                 width: 600px;
                 height: 140px;
-            
+
                 color: #FFF;
-            
+
                 font-size: 2.6em;
                 font-weight: bold;
-                
+
                 overflow: hidden;
                 position: relative;
-                .value{
+
+                .value {
                     position: absolute;
-                
+
                     top: 50%;
                     transform: translateY(-50%);
-                    right : 10px;
-                    
+                    right: 10px;
+
                     white-space: nowrap;
                     overflow: hidden;
                 }
             }
         }
-        .input{
+
+        .input {
             background-color: #FFF;
-        
+
             border-radius: 0 0 25px 25px;
             border: 1px solid #1d1d1d;
             height: 340px;
         }
     }
-}  
+}
 
 
 
 
 
-// .row {
-//     display: flex;
-//     justify-content: space-around;
-//     align-items: center;
-// }
+.row {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 
-// .row button{
-//     width: 50px;
-//     height: 50px;
+.row button {
+    width: 50px;
+    height: 50px;
 
-//     font-size: 1.5em;
+    font-size: 1.5em;
 
-//     border: none;
-//     border-radius: 50%;
-//     background-color: transparent;
+    border: none;
+    border-radius: 50%;
+    background-color: transparent;
 
-//     margin : 8px;
+    margin: 8px;
 
-//     cursor: pointer;
-// }
+    cursor: pointer;
+}
 
-// .row button:hover{
-//     font-weight: bold;
-// }
+.row button:hover {
+    font-weight: bold;
+}
 
-// .row #calculate{
-//     color: #FFF;
-//     background-color: #46e0bc;
-//     width : 121px;
-//     border-radius: 50px;
-// }
-// .row #delete{
-//     color: #FFF;
-//     background-color: #e05046;
-// }
+.row #calculate {
+    color: #FFF;
+    background-color: #46e0bc;
+    width: 121px;
+    border-radius: 50px;
+}
 
-// #division, #multiplication, #subtraction, #addition {
-//     color: #18b893;
-// }
+.row #delete {
+    color: #FFF;
+    background-color: #e05046;
+}
 
-// .input button span{
-//     font-size: 0.6em;
-//     position: absolute;
-// }
+#division,
+#multiplication,
+#subtraction,
+#addition {
+    color: #18b893;
+}
 
-// .active-angle{
-//     background-color: #1d1d1d !important;
-//     color: #FFF !important;
-//     border-radius: 10px !important;
-// }
+.input button span {
+    font-size: 0.6em;
+    position: absolute;
+}
+
+.active-angle {
+    background-color: #1d1d1d !important;
+    color: #FFF !important;
+    border-radius: 10px !important;
+}
