--- a/css/main.css
+++ b/css/main.css
@@ -70,4 +70,55 @@ h1 {
   border-radius: 0 0 25px 25px;
   border: 1px solid #1d1d1d;
   height: 340px;
+}
+
+.row {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.row button {
+  width: 50px;
+  height: 50px;
+  font-size: 1.5em;
+  border: none;
+  border-radius: 50%;
+  background-color: transparent;
+  margin: 8px;
+  cursor: pointer;
+}
+
+.row button:hover {
+  font-weight: bold;
+}
+
+.row #calculate {
+  color: #FFF;
+  background-color: #46e0bc;
+  width: 121px;
+  border-radius: 50px;
+}
+
+.row #delete {
+  color: #FFF;
+  background-color: #e05046;
+}
+
+#division,
+#multiplication,
+#subtraction,
+#addition {
+  color: #18b893;
+}
+
+.input button span {
+  font-size: 0.6em;
+  position: absolute;
+}
+
+.active-angle {
+  background-color: #1d1d1d !important;
+  color: #FFF !important;
+  border-radius: 10px !important;
 }/*# sourceMappingURL=main.css.map */
