--- a/css/main.css
+++ b/css/main.css
@@ -23,16 +23,19 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.calculator .calc-container {
+
+.calc-container {
   background-color: #1d1d1d;
   width: 600px;
   height: auto;
   border-radius: 0 0 30px 30px;
 }
-.calculator .calc-container .output {
+
+.output {
   width: 100%;
 }
-.calculator .calc-container .output .operation {
+
+.operation {
   width: 600px;
   height: 70px;
   color: #878787;
@@ -41,14 +44,16 @@ h1 {
   position: relative;
   overflow: hidden;
 }
-.calculator .calc-container .output .operation .value {
+
+.operation .value {
   position: absolute;
   bottom: 5px;
   right: 10px;
   white-space: nowrap;
   overflow: hidden;
 }
-.calculator .calc-container .output .result {
+
+.result {
   width: 600px;
   height: 140px;
   color: #FFF;
@@ -57,7 +62,8 @@ h1 {
   overflow: hidden;
   position: relative;
 }
-.calculator .calc-container .output .result .value {
+
+.result .value {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -65,7 +71,8 @@ h1 {
   white-space: nowrap;
   overflow: hidden;
 }
-.calculator .calc-container .input {
+
+.input {
   background-color: #FFF;
   border-radius: 0 0 25px 25px;
   border: 1px solid #1d1d1d;
@@ -105,10 +112,7 @@ h1 {
   background-color: #e05046;
 }
 
-#division,
-#multiplication,
-#subtraction,
-#addition {
+#division, #multiplication, #subtraction, #addition {
   color: #18b893;
 }
 
