--- a/inputs/_input.scss
+++ b/inputs/_input.scss
@@ -1,22 +1,20 @@
 .input {
-    background-color: #FFF;
-    border-radius: 0 0 25px 25px;
-    border: 1px solid #1d1d1d;
-    height: 340px;
-  }
-  
-  .row {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  
-  .row button {
+  background-color: $mainwhite;
+  border-radius: 0 0 25px 25px;
+  border: 1px solid $darkBlack;
+  height: 340px;
+}
+
+.row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+ .button {
     width: 50px;
     height: 50px;
     font-size: 1.5em;
@@ -26,35 +24,39 @@
     margin: 8px;
     cursor: pointer;
   }
-  
-  .row button:hover {
-    font-weight: bold;
-  }
-  
-  .row #calculate {
-    color: #FFF;
-    background-color: #46e0bc;
-    width: 121px;
-    border-radius: 50px;
-  }
-  
-  .row #delete {
-    color: #FFF;
-    background-color: #e05046;
-  }
-  
-  #division, #multiplication, #subtraction, #addition {
-    color: #18b893;
-  }
-  
-  .input button span {
-    font-size: 0.6em;
-    position: absolute;
-  }
-  
-  .active-angle {
-    background-color: #1d1d1d !important;
-    color: #FFF !important;
-    border-radius: 10px !important;
-  }
-  
+
+}
+
+.row button:hover {
+  font-weight: bold;
+}
+
+.row #calculate {
+  color: $mainwhite ;
+  background-color: $mainBlue;
+  width: 121px;
+  border-radius: 50px;
+}
+
+.row #delete {
+  color: $mainwhite;
+  background-color: $fadedRed ;
+}
+
+#division,
+#multiplication,
+#subtraction,
+#addition {
+  color: $mainBlue;
+}
+
+.input button span {
+  font-size: 0.6em;
+  position: absolute;
+}
+
+.active-angle {
+  background-color: $darkBlack !important;
+  color: $mainwhite !important;
+  border-radius: 10px !important;
+}
